--- a/scripts/leaflet.css
+++ b/scripts/leaflet.css
@@ -489,8 +489,8 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	line-height: 1.3;
 	font-size: 13px;
 	font-size: 1.08333em;
-	min-height: 1px;
-	max-width: 500px;
+	min-height: 30px;
+	width: 500px;
 	max-height: 400px;
 	overflow-y: scroll;
 	}
