--- a/scripts/leaflet.css
+++ b/scripts/leaflet.css
@@ -494,6 +494,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	width: auto;
 	max-width: none;
 	overflow-y: auto;
+	overflow-x: auto;
 	}
 .leaflet-popup-content p {
 	margin: 17px 0;
